fixed login z-index

--- a/src/containers/navbar/navbar.css
+++ b/src/containers/navbar/navbar.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   z-index: 2;
-  background: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0) ) 
+  background: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0) )
 }
 
 .nav-bar-links {
@@ -16,12 +16,20 @@
   justify-content: space-between;
   color: white;
   text-decoration: none;
+  z-index: 4;
 }
 
 .nav-bar-links-items {
   color: white;
   text-decoration: none;
   margin-right: 40px;
+  z-index: 5;
+}
+
+.loggedIn {
+  color: white;
+  font-size: 16px;
+  z-index: 4;
 }
 
 
@@ -41,16 +49,18 @@
   /* font-weight: 2000; */
   margin-left: 20px;
   margin-top: 25px;
+  z-index: 3;
 }
 
 .title {
   font-size: 20px;
   font-weight: lighter;
   font-stretch: condensed;
+  z-index: 3;
 }
 
 .signup {
-  padding-top: 1000px;
+  padding-top: 800px;
   margin-bottom: 100px;
   padding-bottom: 200px;
   display: inline;
@@ -58,6 +68,7 @@
   width: 20%;
   background-color:rgba(255, 255, 255, 0.4);
   transition: all ease 1.5s;
+  z-index: 1;
 }
 .login {
   padding-top: 1000px;
@@ -68,6 +79,7 @@
   width: 20%;
   background-color:rgba(255, 255, 255, 0.4);
   transition: all ease 1.5s;
+  z-index: 1;
 }
 
 .userenter {
